--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<a href="http://192.168.1.218/wordpress/"></a>
+<!DOCTYPE html>
+<html>
+<body>
+
+<a href="http://192.168.1.218/wordpress/">visit</a>
+</body>
+</html>
