--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="col-lg-6">
 							<div class="hero-text">
 								<h2>Saket Kirange</h2>
-								<p>I’m a embedded engg and discovering new worlds and cultures.</p>
+								<p>Embedded Enthusiasm..Embedded Software Developer At Connviva tech Pvt Ltd</p>
 							</div>
 							<div class="hero-info">
 								<h2>General Info</h2>
@@ -116,16 +116,22 @@
 					</div>
 					<ul class="resume-list">
 						<li>
-							<h2>2016-Present</h2>
-							<h3>Web Design Company</h3>
-							<h4>Web Designer</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+							<h2>Mar 2017 - Present</h2>
+							<h3>Connviva Technology Pvt Ltd</h3>
+							<h4>Embedded Software Developer</h4>
+							<p> </p>
 						</li>
 						<li>
-							<h2>2014-2016</h2>
-							<h3>Web Design Company</h3>
-							<h4>Web Designer</h4>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+							<h2>Aug 2016 - Feb 2017</h2>
+							<h3>Four Byte Embedded Solutions</h3>
+							<h4>Embedded Software Developer</h4>
+							<p></p>
+						</li>
+						<li>
+							<h2>Jul 2015 - Jul 2016</h2>
+							<h3>Micro-Embedded Technology</h3>
+							<h4>Embedded Software Developer</h4>
+							<p></p>
 						</li>
 					</ul>
 				</div>
@@ -144,16 +150,16 @@
 					</div>
 					<ul class="resume-list">
 						<li>
-							<h2>2008</h2>
-							<h3>Ui/Ux Diploma</h3>
-							<h4>Design College California</h4>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+							<h2>2018</h2>
+							<h3>M.tech in Embedded System</h3>
+							<h4>Bits pilani,Work Integrated.</h4>
+							<p>							</p>
 						</li>
 						<li>
-							<h2>2006</h2>
-							<h3>Web design Diploma</h3>
-							<h4>Design College California</h4>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
+							<h2>2015</h2>
+							<h3>B.E. Electronics & Communication</h3>
+							<h4>Deogiri Institute Of Engineering And Management Studies</h4>
+							<p>                            </p>
 						</li>
 					</ul>
 				</div>
@@ -162,40 +168,6 @@
 	</section>
 	<!-- Resume section end -->
 
-	
-	<!-- Review section start -->
-	<section class="review-section spad pb-0">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-xl-7 offset-xl-2">
-					<div class="section-title">
-						<h2>References</h2>
-					</div>
-					<div class="review-slider owl-carousel">
-						<div class="single-review">
-							<div class="qut">“</div>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-							<h3>Robert G. Smith</h3>
-							<h4>Manager, Company</h4>
-						</div>
-						<div class="single-review">
-							<div class="qut">“</div>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-							<h3>Robert G. Smith</h3>
-							<h4>Manager, Company</h4>
-						</div>
-						<div class="single-review">
-							<div class="qut">“</div>
-							<p>Sit amet, consectetur adipiscing elit. Sed porttitor orci ut sapien scelerisque viverra. Sed trist ique justo nec mauris efficitur, ut lacinia elit dapibus. In egestas elit in dap ibus laoreet. Duis magna libero, fermentum ut facilisis id, pulvinar eget tortor. Vestibulum pelle ntesque tincidunt lorem, vitae euismod felis porttitor sed. </p>
-							<h3>Robert G. Smith</h3>
-							<h4>Manager, Company</h4>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Review section end -->
 
 	<!-- Contact section start -->
 	<section class="contact-section spad">
@@ -232,7 +204,7 @@
 	<footer class="footer-section">
 		<div class="container text-center">
 			<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">saket71193</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 </div>
 		</div>
