--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Civic - CV Resume</title>
+	<title>Saket - CV Resume</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Civic - CV Resume">
+	<meta name="description" content="Saket - CV Resume">
 	<meta name="keywords" content="resume, civic, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -92,11 +92,11 @@
 				<div class="col-xl-10 offset-xl-1">
 					<div class="social-link-warp">
 						<div class="social-links">
-							<a href=""><i class="fa fa-pinterest"></i></a>
-							<a href=""><i class="fa fa-linkedin"></i></a>
-							<a href=""><i class="fa fa-instagram"></i></a>
-							<a href=""><i class="fa fa-facebook"></i></a>
-							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href="https://in.pinterest.com/saket71193/"><i class="fa fa-pinterest"></i></a>
+							<a href="https://www.linkedin.com/in/saketkirange"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.instagram.com/saketkirange/?hl=en"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.facebook.com/saket71193"><i class="fa fa-facebook"></i></a>
+							<a href="https://twitter.com/sakee7"><i class="fa fa-twitter"></i></a>
 						</div>
 						<h2 class="hidden-md hidden-sm">My Social Profiles</h2>
 					</div>
@@ -110,7 +110,7 @@
 	<section class="resume-section spad">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xl-7 offset-xl-2">
+				<div class="col-xl-9 offset-xl-2">
 					<div class="section-title">
 						<h2>Work Experience</h2>
 					</div>
