--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				<div class="col-md-8 text-md-right header-buttons">
-					<a href="#" class="site-btn">Download CV</a>
+					<a href="/Resume_Saket.pdf" class="site-btn">Download CV</a>
 					<a href="#" class="site-btn">Discover me</a>
 				</div>
 			</div>
@@ -56,12 +56,12 @@
 	<section class="hero-section spad">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xl-10 offset-xl-1">
+				<div class="col-xl-11 offset-xl-1">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="hero-text">
 								<h2>Saket Kirange</h2>
-								<p>Embedded Enthusiasm..Embedded Software Developer At Connviva tech Pvt Ltd</p>
+								<p>Embedded Enthusiasm... :) <br /> Embedded Software Developer At Connviva tech Pvt Ltd</p>
 							</div>
 							<div class="hero-info">
 								<h2>General Info</h2>
